2001-03-28 Terry Biggs <tbiggs@users.sourceforge.net>

	* added check for save if studypad file is modified on open and new


2001-03-27 Terry Biggs <tbiggs@users.sourceforge.net>

	* 0.3pre2
	* added dialog for viewing commentary modules
	* added files - gs_viewcomm.c and gs_viewcomm.h
	* fixed delete note bug
	

2001-03-20 Terry Biggs <tbiggs@users.sourceforge.net>

	* changes in the look of Bible text modules

2001-03-17 Terry Biggs <tbiggs@users.sourceforge.net>
	
	* added files  gs_display.cpp and gs_display.h 

2001-03-15 Terry Biggs <tbiggs@users.sourceforge.net>
	
	* Added a number of files gs_rwphtml.cpp, gs_rwphtml.h,
	  gs_thmlhtml.cpp and gs_thmlhtml.h which are filters and
	  will be removed with the next release of sword - also added
	  gs_popup_cb.c, gs_popup_cb.h,gs_abouts.c and gs_abouts.h


2001-02-20 Terry Biggs <tbiggs@users.sourceforge.net>
		
	* changed main.cpp to main.c


2001-02-20 Terry Biggs <tbiggs@users.sourceforge.net>

	* added html window for dict/lex modules
	* changed the html interlinear window to a single window that will
	  display five Bible text modules
		
	
	
2001-02-20 Terry Biggs <tbiggs@users.sourceforge.net>

	*release 0.3.9pre1
	*GtkHTML-0.8.0 is not required to build gnomesword
	*but gnomesword can be built with GtkHTML
	*gs_rwphtml.cpp works now.
	

2001-02-20 Terry Biggs <tbiggs@users.sourceforge.net>
	
	*GtkHTML-0.8.0 is now required to build gnomesword
	*GtkHTML is to display Bible texts and commentaries
	
	
2001-02-08 Terry Biggs <tbiggs@users.sourceforge.net>
	
	*added GtkHTML to display commentaries
	

2001-02-03 Terry Biggs <tbiggs@users.sourceforge.net>

        *gal-0.4.99.7 is required to build with gnomesword the Evolution
        shortcut-bar.
        *revomed all the Evolution code


2001-01-30 Terry Biggs <tbiggs@users.sourceforge.net>

        *added history list and buttons


2001-01-08 Terry Biggs <tbiggs@users.sourceforge.net>
        	
	*fixed listeditor bug - crashed with seg fault