@@ -2,8 +2,7 @@ Basic Installation for GnomeSwordLE 0.4.0 and later
 ==================
 ===================== notice =======================
 
-You need to have the Sword Project (sword-1.5.0) installed.
-(sword-1.5.1a for gnomesword-0.3.0 or later)
+You need to have the Sword Project (sword-1.5.1a) installed.
 You need at least one each text ,commentary and dictionary module also.
 Sword-1.5.1a and the modules can be found at www.crosswire.org in the Sword Project.
 
