@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(gnomesword, 0.3pre2)
+AM_INIT_AUTOMAKE(gnomeswordLE, 0.4.0)
 AM_CONFIG_HEADER(config.h)
 
 dnl Pick up the Gnome macros.
@@ -170,47 +170,24 @@ if test "x$printing" = xyes || test "x$all" = xyes; then
         awk 'BEGIN { FS = "."; } { print $1 * 1000 + $2;}'`
     if test "$vers" -ge 20; then
         AC_MSG_RESULT(found)
-        GNOME_PRINT_LIBS=`gnome-config --libs print`
-        GNOME_PRINT_CFLAGS=`gnome-config --cflags print`
+        GNOME_PRINT_LIBS="`gnome-config --libs print` $THREADS_LIBS `unicode-config --libs`"
+        GNOME_PRINT_CFLAGS="`gnome-config --cflags print` $THREADS_CFLAGS `unicode-config --cflags`"
         AC_SUBST(GNOME_PRINT_LIBS)
         AC_SUBST(GNOME_PRINT_CFLAGS)
         AC_DEFINE(USE_GNOMEPRINT, 1, [Define if you want to use printing w/gnome-print])
         have_gnomeprint="yes"
     else
-        AC_MSG_RESULT(You need at least GNOME print 0.20 for this version of gnomesword)
+        AC_MSG_RESULT(You need at least GNOME print 0.25 for this version of gnomeswordLE)
     fi
  else
     AC_MSG_RESULT(Did not find GnomePrint installed)
  fi
 fi
 
-dnl ******************************
-dnl Gnome App Lib checking
-dnl ******************************
-have_gal="no"
-if test "x$shortcutbar" = xyes; then
- AC_MSG_CHECKING(for Gnome App libraries (GAL) >= 0.4.99.7)
- if gnome-config --libs gal > /dev/null 2>&1; then 
-    vers=`gnome-config --modversion gal | sed -e "s/gal-//" -e 's/cvs$//' -e 's/pre$//' | \
-        awk 'BEGIN { FS = "."; } { print $1 * 1000000 + $2 * 10000 + $3 * 100 + $4;}'`
-    if test "$vers" -ge 49907; then
-        AC_MSG_RESULT(found)
-        GNOME_APP_LIBS=`gnome-config --libs gal`
-        GNOME_APP_CFLAGS=`gnome-config --cflags gal`
-        AC_SUBST(GNOME_APP_LIBS)
-        AC_SUBST(GNOME_APP_CFLAGS)
-        have_gal="yes"
-    else
-        AC_MSG_RESULT(Did not find GNOME Application libs 0.4.99.7 )
-    fi
- else
-    AC_MSG_RESULT(Did not find GnomeAppLib (GAL) installed)
- fi
-fi
 gtkhtml_ok="false"
 
-EXTRA_GNOME_LIBS="`gnome-config --libs libglade gnomeui` $THREADS_LIBS `unicode-config --libs`"
-EXTRA_GNOME_CFLAGS="`gnome-config --cflags libglade gnomeui` $THREADS_CFLAGS `unicode-config --cflags`"
+EXTRA_GNOME_LIBS=`gnome-config --libs libglade gnomeui` 
+EXTRA_GNOME_CFLAGS=`gnome-config --cflags libglade gnomeui` 
 AC_SUBST(EXTRA_GNOME_LIBS)
 AC_SUBST(EXTRA_GNOME_CFLAGS)
 
@@ -240,7 +217,7 @@ src/Makefile
 
 
 echo
-echo "Summary of GnomeSword configuration:"
+echo "Summary of GnomeSwordLE configuration:"
 echo
 if test "x$have_speller" = xyes; then
         echo "Spellchecking:                    enabled"
