@@ -1,3 +1,11 @@
+2001-04-05 Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* GnomeSwordLE-0.4.0
+	* does not use GtkHTML
+	* does not use GAL
+	* will use gnomeprint if available (requires gnomeprint 0.25, gdk_pixbuf and gnome_unicode)
+	* will build with spellcheck if aspell or ispell are in the path
+
 2001-03-28 Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* added check for save if studypad file is modified on open and new
